01-ingress.yaml
---
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/examples/echo_server/
# this ingress will create ALB
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
# we need to create certificate (AWSCM)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app1
    # namespace: echoserver
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:688567303455:certificate/744949fd-7df1-4dc2-9ba2-45fd85b46c1a
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
        alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
        alb.ingress.kubernetes.io/group.name: expense
spec:
    ingressClassName: alb 
    rules:
    - host: "app1.basavadevops81s.online"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app1  #this will go created app1 service
              port:
                number: 80
